apps/plugins-api/k8s/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: #{Namespace}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{Application}#
  namespace: #{Namespace}#
  labels:
    app: #{Application}#
spec:
  replicas: #{Replicas.Min}#
  selector:
    matchLabels:
      app: #{Application}#
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: #{Application}#
      annotations:
        ad.datadoghq.com/#{Application}#.logs: |
          [
            {
              "source": "java",
              "service": "#{Application}#"
            }
          ]
    spec:
      containers:
        - name: #{Application}#
          image: #{Image}#
          resources:
            requests:
              memory: #{Requests.Memory}#
              cpu: #{Requests.CPU}#
            limits:
              memory: #{Limits.Memory}#
              cpu: #{Limits.CPU}#
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /q/health
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 5
      imagePullSecrets:
        - name: remote-falcon-ghcr
---
apiVersion: v1
kind: Service
metadata:
  name: #{Application}#
  namespace: #{Namespace}#
  labels:
    app: #{Application}#
spec:
  type: ClusterIP
  selector:
    app: #{Application}#
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #{Application}#
  namespace: #{Namespace}#
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: #{Host}#
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /remote-falcon-plugins-api(/|$)(.*)
            backend:
              service:
                name: #{Application}#
                port:
                  number: 8080
          - pathType: ImplementationSpecific
            path: /remotefalcon/api(/|$)(.*)
            backend:
              service:
                name: #{Application}#
                port:
                  number: 8080
